WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173408
[GTK] Do not use the C API in WebGtkExtensionManager
https://bugs.webkit.org/show_bug.cgi?id=173408
Summary
[GTK] Do not use the C API in WebGtkExtensionManager
Carlos Garcia Campos
Reported
2017-06-15 04:05:50 PDT
Use the C++ API instead.
Attachments
Patch
(6.06 KB, patch)
2017-06-15 04:07 PDT
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2017-06-15 04:07:56 PDT
Created
attachment 312969
[details]
Patch
Build Bot
Comment 2
2017-06-15 04:10:07 PDT
Attachment 312969
[details]
did not pass style-queue: ERROR: Source/WebKit2/WebProcess/gtk/WebGtkInjectedBundleMain.cpp:22: You should add a blank line after implementation file's own header. [build/include_order] [4] ERROR: Source/WebKit2/WebProcess/gtk/WebGtkInjectedBundleMain.cpp:22: You should not add a blank line before implementation file's own header. [build/include_order] [4] Total errors found: 2 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Michael Catanzaro
Comment 3
2017-06-15 06:47:58 PDT
Comment on
attachment 312969
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=312969&action=review
> Source/WebKit2/WebProcess/gtk/WebGtkExtensionManager.cpp:-56 > - ASSERT(userData);
Why did you remove this line? I would keep it.
Carlos Garcia Campos
Comment 4
2017-06-15 06:50:45 PDT
Comment on
attachment 312969
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=312969&action=review
> Source/WebKit2/WebProcess/gtk/WebGtkExtensionManager.cpp:92 > + ASSERT(userDataObject);
Because it's now checked earlier here :-)
Carlos Garcia Campos
Comment 5
2017-06-15 08:37:42 PDT
Committed
r218331
: <
http://trac.webkit.org/changeset/218331
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug