[GTK] Do not use the C API in WebGtkExtensionManager https://bugs.webkit.org/show_bug.cgi?id=173408

Reviewed by Michael Catanzaro.

.:

Update exported symbol signature.

* Source/cmake/gtksymbols.filter:

Source/WebKit2:

Use the C++ API instead.

* WebProcess/gtk/WebGtkExtensionManager.cpp:
(WebKit::parseUserData):
(WebKit::WebGtkExtensionManager::initialize):
* WebProcess/gtk/WebGtkExtensionManager.h:
* WebProcess/gtk/WebGtkInjectedBundleMain.cpp:
(WKBundleInitialize):

Canonical link: https://commits.webkit.org/190290@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218331 268f45cc-cd09-0410-ab3c-d52691b4dbfc